--- a/_posts/2018-06-01-vdd.md
+++ b/_posts/2018-06-01-vdd.md
@@ -6,7 +6,10 @@ categories: casdk
 ghlink: https://gitlab.com/casdk/casdk-vdd/
 ---
 
-#### AIO-Code: `V DVDA`
+#### AIO-Code: 
+
+<span class="copy-msg"></span><span class="one-liner"><code><input type="text" id="vddcode" value="dultimash" onclick="copyCode('#vddcode')" title="Click to Copy" readonly></code></span> <span class="w3-btn" onclick="$('#vddcode').click()" style="font-size:8px">Copy</span>
+
 
 This is a the frameworks internal application to monitor the data values.  
 
