--- a/_posts/2018-06-01-vdd.md
+++ b/_posts/2018-06-01-vdd.md
@@ -8,7 +8,7 @@ ghlink: https://gitlab.com/casdk/casdk-vdd/
 
 #### AIO-Code: 
 
-<span class="copy-msg"></span><span class="one-liner"><code><input type="text" id="vddcode" value="dultimash" onclick="copyCode('#vddcode')" title="Click to Copy" readonly></code></span> <span class="w3-btn" onclick="$('#vddcode').click()" style="font-size:8px">Copy</span>
+<span class="copy-msg"></span><span class="one-liner"><code><input type="text" id="vddcode" value="V DVDA" onclick="copyCode('#vddcode')" title="Click to Copy" readonly></code></span> <span class="w3-btn" onclick="$('#vddcode').click()" style="font-size:8px">Copy</span>
 
 
 This is a the frameworks internal application to monitor the data values.  
