--- a/_posts/2018-09-21-gpsspeed.md
+++ b/_posts/2018-09-21-gpsspeed.md
@@ -11,7 +11,7 @@ ghlink:
 <span class="copy-msg"></span><span class="one-liner"><code><input  style="width: 115px;" type="text" id="gpscode" value="GPSpeed" onclick="copyCode('#gpscode')" title="Click to Copy" readonly></code></span> <span class="w3-btn" onclick="$('#gpscode').click()" style="font-size:8px">Copy</span>
 
 
-A Speedometer With Some Cool features Indcluding Graph/Histogram & Speed Limit Warning
+A Speedometer With Some Cool features Including Graph/Histogram & Speed Limit Warning
 
 ![GPS SPEED](/images/casdk/gpsspeed.png)
 
